--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <div class="form-bg">
-                        <h4>GET IN TOUCH </h4>
+                        <h4>GET IN TOUCH Branch</h4>
                         <form name="frm_register" id="form" method="post">
                             <div class="input-group">
                                 <span class="input-group-addon"><img src="img/name-field.png"></span>
